# udr-nanodbc

./: CMakeLists.txt  CMakeSettings.json  README.md
firebird/: firebird-master
firebird/defs/: udr_plugin.def
iconv/: iconv-master
iconv-master/: libiconv-1.16-1-x86_64.pkg.tar.xz
iconv/lib/: libiconv.lib
lib/x86_64-win64/: nano.dll.O2
linux-sgx/: linux-sgx-master
nano/: conn.cpp  func.cpp  nano.cpp  nano.h  rslt.cpp  stmt.cpp  tnx.cpp
nanodbc/: nanodbc-master
nanodbc-master/: CMakeLists.txt
nanodbc-master/nanodbc-2.13.0/: CMakeSettings.json
nanodbc/lib/release/: nanodbc.lib
nanodbc/odbc_check/: odbc_version.cpp  odbc_version.txt
sql/: $.sql  conn.sql  ctlg.sql  except.sql  func.sql  rslt.sql  stmt.sql  tnx.sql  ty$.sql  udr.sql
src/: conn.cpp  conn.h  ctlg.cpp  ctlg.h  ext.cpp  func.cpp  nano.cpp  nano.h  rslt.cpp  rslt.h  rsrs.cpp  rsrs.h  sgx.inc  stmt.cpp  stmt.h  tnx.cpp  tnx.h
test/: 1.sql  2.sql  ORA_CONN_2.SQL  PERF_FILL.SQL  PERF_PUMP.SQL  PERF_PUMP_2.SQL  PERF_PUMP_CURSOR.SQL  PERF_RSLT.SQL  PERF_RSLT.TXT  PERF_RSLT_2.TXT  PERF_RSLT_CURSOR.TXT  PERF_TBL.SQL  odbc_1.sql  odbc_fb.sql  sample_1.sql
